@@ -1,5 +1,5 @@
 $:.unshift File.expand_path('../lib', __FILE__)
-require '<%= project_name %>/version'
+require '<%= project_name %>'
 
 # Feel free to change whatever you like! This file is yours now.
 Gem::Specification.new do |spec|
