@@ -13,7 +13,7 @@ Feature: Getting started
     When I run bundle exec shoe . inside "my_project"
     Then I should see a file "my_project/Rakefile"
     And I should see a file "my_project/README.rdoc"
-    And I should see a file "my_project/lib/my_project/version.rb"
+    And I should see a file "my_project/lib/my_project.rb"
     And I should see a file "my_project/my_project.gemspec"
 
   Scenario: Running shoe with no arguments in a directory that already has a Rakefile
