@@ -12,7 +12,7 @@ Feature: Release
     And I have run git commit -m "Initial commit" inside "my_project"
 
   Scenario: I can release
-    When I replace "0.0.0" with "0.1.0" in the file "my_project/lib/my_project/version.rb"
+    When I replace "0.0.0" with "0.1.0" in the file "my_project/lib/my_project.rb"
     And I run bundle exec rake --tasks inside "my_project"
     Then I should see "rake release" on standard out
 
@@ -22,12 +22,12 @@ Feature: Release
 
   Scenario: I cannot release when I already have a tag for the current version
     When I run git tag v0.1.0 inside "my_project"
-    And I replace "0.0.0" with "0.1.0" in the file "my_project/lib/my_project/version.rb"
+    And I replace "0.0.0" with "0.1.0" in the file "my_project/lib/my_project.rb"
     And I run bundle exec rake --tasks inside "my_project"
     Then I should not see "rake release" on standard out
 
   Scenario: I cannot release from a branch other than master
     When I run git checkout -b topic inside "my_project"
-    And I replace "0.0.0" with "0.1.0" in the file "my_project/lib/my_project/version.rb"
+    And I replace "0.0.0" with "0.1.0" in the file "my_project/lib/my_project.rb"
     And I run bundle exec rake --tasks inside "my_project"
     Then I should not see "rake release" on standard out
