@@ -2,6 +2,8 @@
 
 * Add --webcvs to rdoc_options in generated gemspec.
 * Move erb templates from lib to datadir.
+* Generate a top-level project module.
+* Move generated VERSION constant out of foo/version.rb, into foo.rb
 
 == 0.5.1 -- 2010 April 7
 
